:bug: squashed em

--- a/unit03_wordpress/wp-content/themes/unit03_wordpressTheme/css/style.css
+++ b/unit03_wordpress/wp-content/themes/unit03_wordpressTheme/css/style.css
@@ -111,30 +111,90 @@ body {
     color: #fff;
 }
 
+/* 
 .site-nav-container .sub-menu {
     position: relative;
     list-style: none;
     margin: 0;
     padding: 0;
-}
+
+} */
 
 /* ! add padding to a elements themselves for sub-menu */
 
-.site-nav-container .sub-menu>li {
-    position: absolute;
-    inset: 0;
-    background-color: var(--backgroundColor) !important;
+ul.nav li {
+    position: relative;
+    top: 0;
+}
+
+.menu-item-has-children .sub-menu {
+    display: none;
+    list-style: none;
+    box-shadow: 0 0 10px rgb(0 0 0 / .5);
+    padding: 0;
+    border-radius: 10px;
+}
+
+.menu-item-has-children .sub-menu>.menu-item:first-child {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.menu-item-has-children .sub-menu>.menu-item:last-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 
 }
 
-.sub-menu>li.menu-item-16 {
+/* .menu-item-has-children:hover>.sub-menu li {
+    position: absolute;
+    inset: 0;
+    display: block;
+}
+ */
+
+.open-menu-items {
+
+    position: absolute;
+    display: block !important;
+    padding: 0;
+    top: 50px;
+    left: -25px;
+    box-shadow: 0 0 10px rgb(0 0 0 / .5);
+}
+
+.open-menu-items li {
+    text-align: center;
+    background-color: var(--backgroundColor) !important;
+    width: 150px;
+}
+
+
+/* .sub-menu>li.menu-item {
     display: none;
 }
 
-.sub-menu>li.menu-item-16.open {
+.sub-menu>li.menu-item.open,
+.open {
     display: block;
+} */
+
+/* .sub-menu>li a {
+    background-color: var(--backgroundColor);
+    padding: 1em;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .6);
 }
 
+.sub-menu>li a:last-child {
+
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+ */
 .site-nav-container .mobile-menu,
 .site-nav-container .menu,
 .site-nav-container #menu-main-menu {
@@ -408,7 +468,7 @@ footer .about-block p {
 }
 
 .blog {
-    margin-top: 4em;
+    margin-top: 1em;
 }
 
 .blog-grid .card-content {
